[kai.he] fix: product list wrap

--- a/src/components/Commodity/CommodityList.css
+++ b/src/components/Commodity/CommodityList.css
@@ -6,4 +6,5 @@
     background-color: white;
     padding: 20px;
     display: flex;
+    flex-wrap: wrap;
 }
